--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+streamlit==1.12.0
 pandas==1.5.0
 numpy==1.23.3
 scikit-learn==1.2.0
@@ -5,6 +6,6 @@ joblib==1.2.0
 xgboost==1.7.5
 lightgbm==3.3.2
 matplotlib==3.6.0
-rdkit-pypi==2023.03.2
+rdkit-pypi==2023.03.2  # Check for the correct version on PyPI
 py3Dmol==0.4.0
 pillow==9.2.0
