--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ joblib
 xgboost
 lightgbm
 matplotlib
+rdkit
 #rdkit-pypi==2023.03.2  # Check for the correct version on PyPI
 #py3Dmol==0.4.0
 #pillow==9.2.0
