Classfication and Matrics Calculations

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ xgboost
 lightgbm
 matplotlib
 rdkit
+tensorflow
 #rdkit-pypi==2023.03.2  # Check for the correct version on PyPI
 #py3Dmol==0.4.0
 #pillow==9.2.0
